fixed issue where page reloded when clicking navbar on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,6 @@ header .container.flex {
 }
 
 #logo {
-  flex: 1;
   font-size: var(--font-size-4);
   font-weight: var(--font-weight-8);
   color: var(--gray-12);
